@@ -1,3 +1,9 @@
+Wed Mar  7 14:52:35 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tools/scripts/lcov.pl:
+
+          Reducing some of the noise in the no coverage file reporting.
+
 Wed Mar  7 13:55:13 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
 
         * tools/scripts/lcov.pl:
